bugfix: 404 page buttons didnt have any gap
feature: improved blog loading by not showing the pagination controls until the blog data has been fetched

--- a/blocks/blog/blog.css
+++ b/blocks/blog/blog.css
@@ -10,6 +10,10 @@
   border-block-start: 3px double var(--color-text);
   border-block-end: 1px solid var(--color-text);
 
+  &.loading {
+    display: none;
+  }
+
   & button {
     flex: 1;
     border-radius: 0;
